# src/nutrition/interfaces/http/handlers/FoodHandler.go
@@ -11,12 +11,14 @@ import (
 type FoodHandler struct {
 	SearchUC  *usecases.SearchFoodsUseCase
 	GetByIDUC *usecases.GetFoodByIDUseCase
+	ImportUC  *usecases.ImportFoodsWithImagesUseCase
 }
 
-func NewFoodHandler(searchUC *usecases.SearchFoodsUseCase, getByIDUC *usecases.GetFoodByIDUseCase) *FoodHandler {
+func NewFoodHandler(searchUC *usecases.SearchFoodsUseCase, getByIDUC *usecases.GetFoodByIDUseCase, importUC *usecases.ImportFoodsWithImagesUseCase) *FoodHandler {
 	return &FoodHandler{
 		SearchUC:  searchUC,
 		GetByIDUC: getByIDUC,
+		ImportUC:  importUC,
 	}
 }
 
@@ -31,13 +33,28 @@ func NewFoodHandler(searchUC *usecases.SearchFoodsUseCase, getByIDUC *usecases.G
 // @Router       /public/foods [get]
 func (h *FoodHandler) SearchFoods(c *gin.Context) {
 	name := c.Query("search")
-	foods, err := h.SearchUC.Execute(name)
+	page, _ := strconv.Atoi(c.DefaultQuery("page", "1"))
+	limit, _ := strconv.Atoi(c.DefaultQuery("limit", "10"))
+
+	if page < 1 {
+		page = 1
+	}
+	if limit < 1 {
+		limit = 10
+	}
+
+	foods, total, err := h.SearchUC.Execute(name, page, limit)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to search foods"})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"data": foods})
+	c.JSON(http.StatusOK, gin.H{
+		"data":  foods,
+		"total": total,
+		"page":  page,
+		"limit": limit,
+	})
 }
 
 // GetFoodByID godoc
@@ -64,4 +81,22 @@ func (h *FoodHandler) GetFoodByID(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{"data": food})
+}
+
+// ImportFoods godoc
+// @Summary      Manual import of foods from USDA
+// @Description  Triggers a one-time import of basic food categories from USDA API.
+// @Tags         Nutrition
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  map[string]interface{}
+// @Router       /public/foods/import [post]
+func (h *FoodHandler) ImportFoods(c *gin.Context) {
+	err := h.ImportUC.Execute(c.Request.Context())
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to import foods: " + err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "Foods imported successfully"})
 }
